# language-bot

./: .dockerignore  .gitignore  LICENSE.txt  README.md  UX.odg  config.json  pyproject.toml  requirements.txt
db/: Dockerfile  deploy_migrations.py  deploy_schema.sh
db/migrations/: 0001_schema.sql
deploy/: Dockerfile  docker-compose.yml  redis-users.acl  redis.conf
scripts/: build_images.sh  generate_keys.sh  prepare_env.sh  run_bot.sh
src/language_bot/: __init__.py  external_user.py  service_context.py  user.py  vocabulary.py
src/language_bot/chatbots/: chatbot_service_interface.py  gpt4all_bot.py
src/language_bot/common/: config.py  database.py
src/language_bot/session/: __init__.py  add_words_to_vocabulary_state.py  base_user_session_state.py  basic_train_vocabularyState.py  new_user_initial_state.py  practice_state.py  select_language_state.py  select_user_name_state.py  session.py  session_context.py  session_state.py  translation_state.py  user_menu_state.py  user_settings_state.py  vocabulary_state.py  word_properties_state.py
src/language_bot/translators/: __init__.py  libretranslate.py  translation_service_interface.py
